# todo-list-cli

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/todo/: database.py  example.py  task.py  todocli.py
tests/: test_example.py  test_task.py  test_todocli.py
