[project]
name = "todo-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Slokem"}
]
requires-python = ">=3.10"
dependencies = [
    "typer"
]


[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2"
]


# *****************************************************************************
#                                   RUFF
# *****************************************************************************
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
line-ending = "lf" # Use `\n` line endings for all files

[tool.ruff.lint.per-file-ignores]
# N/A
