[project]
name = "todo-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Slokem"}
]
requires-python = ">=3.10"
dependencies = [
    "typer"
]


[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2"
]


# ******************************************************************************
#                                   RUFF
# ******************************************************************************
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
line-ending = "lf" # Use `\n` line endings for all files

[tool.ruff.lint.per-file-ignores]
# N/A

[tool.ruff.lint]
# TODO: replace with human friendly name when supported (ref. https://github.com/astral-sh/ruff/issues/1773).
# NOTE: reference for rules supported: https://docs.astral.sh/ruff/rules/
select = [
    "ARG",    # flake8-unused-arguments, flags unused function arguments.
    "B006",   # mutable-argument-default, warns against using mutable defaults as function arguments.
    "B008",   # function-call-in-default-argument
    "F",      # Pyflakes
    "I",      # isort, Enable import-sorting (isort) checks (ensures imports are sorted).
    "RUF100", # unused-noqa, Ruff’s custom code RUF100: flags unused “noqa” comments
    "RUF101", # redirected-noqa
]

# ******************************************************************************
#                                   MYPY
# ******************************************************************************
[tool.mypy]
# Disallow untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[[tool.mypy.overrides]]
# Ignore external packages that are not typed.
module = [
    "tensorrt.*",
    "requests.*",
]
ignore_missing_imports = true
